# PARQO_demo_repo

./: .flaskenv  README.md  demo_model.py  gen_real_error.py  install.sh  postgres.py  prep_cardinality.py  prep_query_template.py  pyproject.toml  query_process.py  requirementx.txt  utility.py
app/: __init__.py  config.py  index.py
app/models/: error_plot.py
app/static/: styles.css.html  visualize.js
app/static/query/: template.json
app/static/query/join-order-benchmark/: 11a.sql  12a.sql  22a.sql  23a.sql  25a.sql  27a.sql  28a.sql  30a.sql  33a.sql  3a.sql  5a.sql
app/static/query/join-order-benchmark-discarded/: 11d.sql  12c.sql  14b.sql  15b.sql  18b.sql  19b.sql  19d.sql  1b.sql  20c.sql  21c.sql  22b.sql  22c.sql  23b.sql  23c.sql  25b.sql  25c.sql  26b.sql  26c.sql  27b.sql  30b.sql  31b.sql  33c.sql  5c.sql  7b.sql  7c.sql  8b.sql
app/templates/: index.html
cardinality/: join.txt  new_single.txt
lsc/job/: local-sel-condition-saved-copy.csv
query/join-order-benchmark/: 11c.sql  14a.sql  14c.sql  18a.sql  18c.sql  19a.sql  19c.sql  20a.sql  20b.sql  21a.sql  21b.sql  22d.sql  24a.sql  24b.sql  26a.sql  27c.sql  28b.sql  28c.sql  29a.sql  29b.sql  29c.sql  30c.sql  31a.sql  31c.sql  33b.sql  3b.sql  3c.sql  5b.sql  6b.sql  6d.sql  6f.sql  7a.sql  9a.sql  9b.sql  9c.sql  9d.sql
